[package]
name = "ode-rs-0000"
version = "0.1.0"
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lazy_static = "1.4.0"
# once_cell = "1.17.1"

asciiz = { version = "0.1.0" }
# asciiz = { version = "0.1.0", git = "https://github.com/nomissbowling/asciiz.git", package = "asciiz" }
# asciiz = { path = "../asciiz" } # libasciiz.rlib asciiz::u8z

oyk = { version = "0.1.0" }
# oyk = { version = "0.1.0", git = "https://github.com/nomissbowling/oyk.git", package = "oyk" }
# oyk = { path = "../oyk" } # liboyk.rlib oyk::ode

[build-dependencies]
cc = "1.0.79"
bindgen = "0.65.1"
