[package]
name = "ode-rs-0000"
version = "0.9.1" # change with html_root_url in main.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "OYK sample for ODE (Open Dynamics Engine)"
keywords = ["opengl", "dynamics", "kinetics", "physics", "3D"]
categories = ["simulation", "rendering", "science", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/ode-rs-0000/"
homepage = "https://crates.io/crates/ode-rs-0000"
repository = "https://github.com/nomissbowling/ode-rs-0000"

readme = "README.md"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lazy_static = "1.4.0"
# once_cell = "1.17.1"

asciiz = { version = "0.1" }
# asciiz = { version = "0.1", git = "https://github.com/nomissbowling/asciiz.git", package = "asciiz" }
# asciiz = { path = "../asciiz" } # libasciiz.rlib asciiz::u8z

oyk = { version = "0.9.1" }
# oyk = { version = "0.9", git = "https://github.com/nomissbowling/oyk.git", package = "oyk" }
# oyk = { path = "../oyk" } # liboyk.rlib oyk::ode

home = { version = "=0.5.5" } # cc(1.0.79)/bindgen(0.65.1) requires home(0.5.5)

[build-dependencies]
cc = "=1.0.79"
bindgen = "=0.65.1"
